- Memory indicator tooltip now shows used and total Java heap memory in
  kilobytes
- Updated Transact-SQL mode (Ollie Rutherfurd)
- Updated Omnimark mode (Lionel Fiol)
- Option for search and replace to beep on auto wrap (Kenrick Drew)
- Faster (in theory anyway) file loading as a side effect of some bug
  fixes
- Improved help viewer welcome screen

+ Bug Fixes

- Fixed a memory leak with the search and replace dialog box
- Undo would be broken after a file was reloaded
- Fixed exception thrown if a buffer contained definitions for integer
  properties (tab size, maximum line length, ...)
- Changing the gutter font didn't update the gutter width
- Fixed broken scrolling behavior
- Some files would open with only one line visible
- MiscUtilities.compareStrings() would throw exceptions with strings
  that contained embedded numbers larger than 2^31
- Creating a new view or splitting the view didn't work
- Tool bar tooltips were broken

* Version 4.0pre1

+ New Features

- New document model uses less memory, loads files faster, and has a
  simpler API for developers. Also, finally, the file modification flag
  is cleared when all edits up to a save are undone
- New folding features:
  - Three fold modes: none, indent, explicit. 'none' is the default now.
    'indent' is the indent-based folding mode, that behaves the same as
    indent-based folding in jEdit 3.1 and 3.2. 'explicit' parses the
    buffer for {{{ and }}} and adds folds based on that.
  - Change the fold mode by clicking the fold mode widget in the status
    bar, or in the Buffer Options dialog box, or with the 'folding'
    buffer-local property, or in the Global Options dialog box.
  - Folds are now shown in the gutter as triangles, which is more
    intuitive than filled/not-filled boxes
  - View->Folding->Collapse All Folds command, equivalent to invoking
    'Expand Folds With Level' and specifying a level of 1
  - Different text areas editing the same buffer can now have different